# nlove

./: .gitignore
platform/nlove/: CMakeLists-Caanoo.patch  CMakeLists-Caanoo.txt  CMakeLists-Cygwin.patch  CMakeLists-Dingoo.patch  CMakeLists-Dingoo.txt  CMakeLists-NanoNote.patch  CMakeLists.txt  XCompile-Caanoo.txt  XCompile-Dingoo.txt  XCompile-NanoNote.txt  build.sh
src/: CMakeLists.txt  love.cpp
src/common/: config.h  config.h.cmake
src/modules/audio/: wrap_Audio.cpp
src/modules/audio/sdl/: Audio.cpp  Audio.h  Source.cpp  Source.h
src/modules/graphics/sdl/: Font.cpp  Font.h  Glyph.cpp  Glyph.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Quad.cpp  Quad.h  wrap_Font.cpp  wrap_Font.h  wrap_Graphics.cpp  wrap_Graphics.h  wrap_Image.cpp  wrap_Image.h  wrap_Quad.cpp  wrap_Quad.h
src/modules/image/: wrap_Image.cpp
src/modules/image/sdl/: Image.cpp  Image.h  ImageData.cpp  ImageData.h
src/modules/physics/box2d/Source/Common/: b2Math.h
src/modules/sound/lullaby/: Sound.cpp
src/scripts/: boot.lua  boot.lua.h
